src/adapters/tui/widgets/snapshots/omakure__adapters__tui__widgets__search__tests__snapshot_render_search_empty.snap
---
source: src/adapters/tui/widgets/search.rs
expression: terminal.backend()
---
"┌Search────────────────────────────────────────────────────────────────────────┐"
"│┌Search──────────────────────────────────────────────────────────────────────┐│"
"││Type to search...                                                           ││"
"│└────────────────────────────────────────────────────────────────────────────┘│"
"│┌Results─────────────────────────────────────────────────────────────────────┐│"
"││No scripts found for this search.                                           ││"
"││                                                                            ││"
"││                                                                            ││"
"││                                                                            ││"
"││                                                                            ││"
"││                                                                            ││"
"││                                                                            ││"
"││                                                                            ││"
"││                                                                            ││"
"││                                                                            ││"
"││                                                                            ││"
"│└────────────────────────────────────────────────────────────────────────────┘│"
"│Type to search, Enter open, Alt+E envs, Esc back                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
