src/adapters/tui/widgets/snapshots/omakure__adapters__tui__widgets__search__tests__snapshot_render_search_with_results.snap
---
source: src/adapters/tui/widgets/search.rs
expression: terminal.backend()
---
"┌Search────────────────────────────────────────────────────────────────────────┐"
"│┌Search──────────────────────────────────────────────────────────────────────┐│"
"││deploy                                                                      ││"
"│└────────────────────────────────────────────────────────────────────────────┘│"
"│┌Results──────────────────────────────┐┌Schema: deploy.sh────────────────────┐│"
"││> Deploy App (deploy.sh)             ││Name: Deploy App                     ││"
"││                                     ││Description: Deploy to production    ││"
"││                                     ││Tags: ops                            ││"
"││                                     ││                                     ││"
"││                                     ││(no fields)                          ││"
"││                                     ││                                     ││"
"││                                     ││                                     ││"
"││                                     ││                                     ││"
"││                                     ││                                     ││"
"││                                     ││                                     ││"
"││                                     ││                                     ││"
"│└─────────────────────────────────────┘└─────────────────────────────────────┘│"
"│Type to search, Enter open, Alt+E envs, Esc back                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
